python/test-data/testTypesSet3.err
Traceback (most recent call last):
  File "test-data/testTypesSet3.py", line 11, in <module>
    foo(set([func]))
  File "test-data/testTypesSet3.py", line 7, in foo
    res.append(f())
WyppTypeError: got value of wrong type
given:    42
expected: value of type str

context: foo(l: set[Callable[[], str]]) -> list[str]
                ^^^^^^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesSet3.py:4
declared at: test-data/testTypesSet3.py:3
caused by: test-data/testTypesSet3.py:4
  |     l.add(lambda: 42) # error
caused by: test-data/testTypesSet3.py:11
  | foo(set([func]))
